<resources>
    <string name="app_name">كوك هوم</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">الرئيسية</string>

    <string name="facebook_app_id">2194559647440865</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_rationale">storage permission</string>
    <string name="title_activity_maps_near_location">Map</string>
    <string name="GPSAlertDialogTitle">GPS</string>
    <string name="GPSAlertDialogMessage"> السماح بتحديد موقعك </string>
    <string name="cancel">الغاء</string>
    <string name="please_wait">جارى اضافة المنتج ...</string>
    <integer name="animation_duration_medium">1000</integer>

    <string-array name="popup_list">
        <item>اسم الطبخة</item>
        <item>اسم الاسرة</item>
        <item>اعلى سعر</item>
        <item>اقل سعر</item>
        <item>الاقرب اليك</item>
        <item>أ - ى</item>
        <item>ى - أ</item>
    </string-array>

    <string-array name="products_popup_list">
        <item>اعلى سعر</item>
        <item>اقل سعر</item>
        <item>الاقرب اليك</item>
        <item>أ - ى</item>
        <item>ى - أ</item>
    </string-array>
    <string name="title_activity_complete_order_map">Map</string>
    <string name="add_to_card">اضف للسلة</string>
    <string name="rate_this_prod">قيم هذا المنتج</string>
    <string name="add_your_comment">اكتب التعليق الخاص بك ...</string>
    <string name="publish">نشر</string>
    <string name="comments">التعليقات</string>
    <string name="comment_txt">التعليق ...</string>
    <string name="item_name">اسم المنتج</string>
    <string name="osra_name">اسم الأسرة</string>
    <string name="item_price">السعر</string>
    <string name="osra_location">مكان الاسرة</string>
</resources>
