<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_linear_item_layout"
    android:layout_width="match_parent"
    android:layout_height="155dp"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:padding="1dp"
                android:gravity="right"
                android:id="@+id/item_name"
                android:text="@string/item_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:padding="3dp"
                android:gravity="right"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:id="@+id/osra_name_id"
                android:text="@string/osra_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="7dp"
                android:ellipsize="end"
                android:padding="1dp"
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:id="@+id/item_price_id"
                android:text="@string/item_price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:padding="1dp"
                android:id="@+id/sra_location_id"
                android:text="@string/osra_location"/>

            <RatingBar
                android:id="@+id/item_osra_rate"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:max="100"
                android:layout_marginTop="7dp"
                android:isIndicator="true"
                android:numStars="5" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>