<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context="com.ncookhom.ProductDetails.ProductDetails">

    <FrameLayout
        android:id="@+id/tool_title_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right|center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_arrow_forward_black_24dp" />

        <TextView
            android:id="@+id/prod_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="45dp"
            android:gravity="center"
            android:text="اسم المنتج"
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/ic_shopping_cart_black_24dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_card_btn_id"
        android:layout_below="@+id/tool_title_layout"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/banner_slider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    custom:auto_cycle="true"
                    custom:indicator_visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/prod_title2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="اسم المنتج"
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/prod_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginLeft="7dp"
                            android:background="@color/colorPrimary"
                            android:padding="4dp"
                            android:text="فئة المنتج"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/prod_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="وصف المنتج"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="السعر: "
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/prod_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" السعر"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="ريال "
                            android:textSize="16sp" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="مدة التجهيز : "
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/prod_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" المدة"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <RatingBar
                            android:id="@+id/prod_rate"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:layout_marginLeft="8dp"
                            android:numStars="5" />
                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="العدد :"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/increase_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:background="@android:color/darker_gray"
                            android:src="@drawable/ic_add_black_24dp" />

                        <TextView
                            android:id="@+id/prod_num_order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:text="1"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/decrease_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="10dp"
                            android:background="@android:color/darker_gray"
                            android:src="@drawable/ic_decrease_black_24dp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray" />


                    <LinearLayout
                        android:id="@+id/rate_prod_layout"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="#EAEAEA"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="@string/rate_this_prod" />

                        <RatingBar
                            android:id="@+id/rate_stars_num_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="1dp"
                            android:isIndicator="false"
                            android:numStars="5" />

                        <EditText
                            android:id="@+id/comment_ed_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="0dp"
                            android:gravity="center"
                            android:hint="@string/add_your_comment" />

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/publish_your_comment_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginTop="3dp"
                                android:background="@color/colorPrimary"
                                android:paddingBottom="3dp"
                                android:paddingLeft="5dp"
                                android:layout_weight="1"
                                android:paddingRight="5dp"
                                android:paddingTop="3dp"
                                android:text="@string/publish" />

                            <TextView
                                android:id="@+id/all_comments_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginTop="3dp"
                                android:layout_marginRight="7dp"
                                android:background="@color/colorPrimary"
                                android:paddingBottom="3dp"
                                android:paddingLeft="5dp"
                                android:layout_weight="1"
                                android:paddingRight="5dp"
                                android:paddingTop="3dp"
                                android:text="@string/comments" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/add_card_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_add_shopping_cart_black_24dp"
        android:gravity="right|center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="17dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:text="@string/add_to_card"
        android:textColor="@android:color/white" />
</RelativeLayout>
